--- a/src/main/resources/templates/book.html
+++ b/src/main/resources/templates/book.html
@@ -2,7 +2,7 @@
 <head> 
 	<meta charset="UTF-8">
 	<title>도서 상세  정보</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link href="/BookMarket/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container py-4">
@@ -23,7 +23,15 @@
 	</div>
 
  	<div class="row align-items-md-stretch">
-		<div class="col-md-12">
+		<div class="col-md-4">
+			<img th:src="'/BookMarket/images/'+${book.getFilename()}" style="width: 90%"/>
+			<div class="text-center">
+			<a th:href="@{download(file=${book.filename})}" style="text-decoration-line:none">
+				이미지다운로드
+			</a>
+			</div>
+			</div>
+			<div class="col-md-8">
 			<h3 th:text ="${book.name}"></h3> 
 				<p th:text ="${book.description}"></p>
 				<br>
