--- a/src/main/resources/templates/books.html
+++ b/src/main/resources/templates/books.html
@@ -2,7 +2,7 @@
 <head> 
 	<meta charset="UTF-8">
 	<title>도서 목록</title>
-	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+	<link href="/BookMarket/css/bootstrap.min.css" rel="stylesheet" >
 </head>
 <body>
 <div class="container py-4">
@@ -32,6 +32,7 @@
 
  	<div class="row align-items-md-stretch text-center">
 		<div class="col-md-4" th:each="book:${bookList}">
+		<img th:src="'/BookMarket/images/'+${book.filename}" alt="image" style = "width: 60%" />
 			<h3 th:text ="${book.name}"></h3>
 			<p th:text = "${book.author}">
 			<p th:text = "${book.publisher} + '|'+ ${book.releaseDate}"> 
